# api-for-twitter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
nginx/: Dockerfile  nginx.conf
requirements/: base.txt  developments.txt
src/: config.py  database.py  main.py  urls.py
src/models/: likes.py  models.py  tweets.py  users.py
src/routes/: image.py  routes.py  user.py
src/schemas/: like.py  schemas.py  user.py
src/services/: follower.py  image.py  like.py  services.py  tweet.py  user.py
src/utils/: data_migrations.py  image.py  token.py  user.py
tests/: conftest.py  database.py
tests/routes/: test_images.py  test_likes.py  test_tweets.py
tests/utils/: test_token.py
