[tool.poetry]
name = "python-advanced-diploma"
version = "0.1.0"
description = ""
authors = ["Vladimir Litvinov <vladimirlitvinov123q@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
jinja2 = "^3.1.3"
uvicorn = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
